# astrozor

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  BLOCKERS.md  CHANGELOG.md  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  bootstrap_zoo_campaigns.py  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/apps/accounts/: admin.py  api.py  apps.py  discord_bot.py  emails.py  geoip.py  managers.py  mastodon_api.py  mastodon_post.py  middleware.py  models.py  oauth.py  schemas.py  signals.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_identity.py  0003_profile_zenodo_token_profile_zenodo_use_sandbox.py  0004_mastodoninstance_alter_identity_unique_together_and_more.py  0005_profile_mastodon_autopost_checkin.py  0006_user_last_login_city_user_last_login_country_and_more.py  0007_profile_map_preferences.py  0008_profile_show_local_profile_show_user_and_more.py  0009_identity_discord_guild_id_and_more.py  0010_identity_refresh_token_identity_token_expires_at_and_more.py  0011_alter_identity_access_token_and_more.py
backend/apps/admin_panel/: api.py  apps.py  clouds.py  models.py  signals.py  tasks.py
backend/apps/admin_panel/migrations/: 0001_initial.py  0002_alter_mapinfra_pmtiles_source_url.py  0003_light_pollution_source.py  0004_mapinfra_light_pollution_black_marble_last_update_and_more.py  0005_mapinfra_chat_text_max_length.py  0006_mapinfra_clouds.py  0007_clouds_providers.py  0008_alter_mapinfra_light_pollution_black_marble_status_and_more.py
backend/apps/chat/: admin.py  api.py  models.py  sanitize.py  schemas.py
backend/apps/chat/migrations/: 0001_initial.py  0002_thread_and_attachments.py  0003_rename_chat_messag_parent__idx_chat_messag_parent__ede592_idx.py  0004_sprint_messages.py  0005_message_edited_at.py  0006_message_issue_scope.py
backend/apps/citizen/: api.py  apps.py  models.py  schemas.py  tasks.py  zooniverse.py
backend/apps/citizen/migrations/: 0001_initial.py  0002_alter_campaign_status.py  0003_campaign_tags.py  0004_alter_campaign_tags.py  0005_zooniversegroup_campaign_zooniverse_workflow_id_and_more.py  0006_zooniverseproject_workflows.py  0007_zooniverseproject_launch_flags.py  0008_sprintparticipant.py  0009_rename_citizen_spr_sprint__d4d3f1_idx_citizen_spr_sprint__e6f54c_idx.py
backend/apps/core/: api.py  models.py  security.py  timezones.py  visibility.py
backend/apps/core/migrations/: 0001_initial.py
backend/apps/docs/: api.py  apps.py
backend/apps/events/: api.py  models.py  schemas.py
backend/apps/events/migrations/: 0001_initial.py  0002_event_external_location.py  0003_event_comment.py  0004_event_meeting_url.py  0005_rename_events_comm_event_i_idx_events_comm_event_i_09c51b_idx_and_more.py  0006_alter_event_tags.py  0007_event_allowed_users_event_discussion_allowed_users_and_more.py  0008_event_discord_url_event_geocache_url_and_more.py
backend/apps/feeds/: api.py  apps.py  fetch.py  models.py  schemas.py  tasks.py
backend/apps/feeds/migrations/: 0001_initial.py  0002_feedsource_kind.py
backend/apps/geocoding/: api.py  apps.py
backend/apps/notifications/: api.py  apps.py  discord_dispatch.py  dispatchers.py  models.py  schemas.py  signals.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_discordpreference.py
backend/apps/places/: admin.py  api.py  apps.py  csv_io.py  light_pollution.py  models.py  schemas.py  tasks.py
backend/apps/places/migrations/: 0001_initial.py  0002_bortlemeasurement.py  0003_dual_bortle.py  0004_place_opening_hours_schedule.py  0005_place_opening_hours_textfield.py  0006_place_allowed_users_place_discussion_allowed_users_and_more.py
backend/apps/presence/: admin.py  api.py  apps.py  models.py  schemas.py  tasks.py
backend/apps/presence/migrations/: 0001_initial.py  0002_checkin_source_alter_checkin_user_and_more.py
backend/apps/projects/: api.py  github.py  models.py  schemas.py
backend/apps/projects/migrations/: 0001_initial.py  0002_project_tags.py  0003_alter_project_tags.py  (+2 more)
backend/apps/publishing/: api.py  apps.py  doi.py  feeds.py  models.py  rendering.py  schemas.py  sitemaps.py
backend/apps/publishing_api/: api.py  apps.py  auth.py  models.py  quarto_bundle.py  schemas.py
backend/apps/uploads/: api.py  models.py
backend/astrozor/: __init__.py  api.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/locale/: .gitkeep
clients/cli/: README.md  pyproject.toml
jupyter-addin/: LICENSE  README.md  pyproject.toml
jupyter-addin/astrozorpub/: __init__.py  _startup_template.py  cli.py  config.py  install.py  magic.py  publish.py  server_extension.py  widget.py
jupyter-addin/astrozorpub/themes/: dark.css
jupyter-addin/jupyter-config/jupyter_server_config.d/: astrozorpub.json
jupyter-addin/lab-extension/: README.md  package.json  tsconfig.json
jupyter-addin/lab-extension/src/: index.ts
jupyter-addin/lab-extension/style/: index.css  index.js
(+196 files in other folders)
