[project]
name = "astrozor-cli"
version = "0.0.1"
description = "Astrozor publishing CLI"
authors = [{ name = "Astrozor contributors" }]
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.28.0",
  "typer>=0.15.0",
  "PyYAML>=6.0",
]

[project.scripts]
astrozor = "astrozor_cli.__main__:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
